# RamEngine

./: .bazelrc  .gitignore  CMakeLists.txt  README.md  WORKSPACE.bazel  ram_rules.bzl
src/: BUILD.bazel  CMakeLists.txt  main.cpp  simple_material.mat
src/Material/: material_utils.cpp  material_utils.h
src/MeshUtils/: BUILD  shape_renderer.cpp  shape_renderer.h
src/core/: BUILD
src/core/base/: engine.cpp  engine.h  node.cpp  node.h
src/core/camera/: camera.cpp  camera.h
src/core/input/: input.cpp  input.h
src/engine/: CMakeLists.txt
src/engine/core/: engine.cpp  engine.h
src/engine/modules/: render_module.cpp  render_module.h
src/material/: BUILD  material_utils.cpp
src/mesh_utils/: BUILD  shape_renderer.cpp  shape_renderer.h
tools/: BUILD  basisu  cmgen  normal-blending  roughness-prefilter  simple_material.filamat  simple_material.mat  specular-color  uberz
tools/assets/ibl/lightroom_14b/: lightroom_14b_skybox.ktx
