cc_binary(
    name = "filament_demo",
    srcs = ["main.cpp"],
    copts = [
        "-std=c++17",
        "-stdlib=libc++",
    ],
    linkopts = [
        "-lc++",
        "-ldl",
        "-lpthread",
        "-lxcb",
        "-lSDL2",
        "-lvulkan",
    ],
    deps = [
        "//src/Material:material_utils",
        "//src/MeshUtils:mesh_utils",
        "//third_party/filament",
    ],
)
