load("//:ram_rules.bzl", "ram_material")

ram_material(
    name = "simple_material",
    src = "simple_material.mat",
)

cc_binary(
    name = "filament_demo",
    srcs = ["main.cpp"],
    copts = [
        "-std=c++17",
        "-stdlib=libc++",
    ],
    linkopts = [
        "-lc++",
        "-ldl",
        "-lpthread",
        "-lxcb",
        "-lSDL2",
        "-lvulkan",
    ],
    deps = [
        ":simple_material",
        "//src/Material:material_utils",
        "//src/MeshUtils:mesh_utils",
        "//third_party/filament",
    ],
)
